maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:15: error: not found: value j
    while (compteur<=h*j)
                       ^ShortestPathMaze:28: error: not found: value num
                {setIndication(x+1,y,num+1);compteur+=1}}
                                     ^